# rustyweb

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  Dockerfile  Makefile  NOTICE  PRIMER.md  README.md  index.html?per_page=100&q=wacz&search_field=search&format=json  rust-toolchain.toml  stanford.json  sucho-wacz-urls-02.txt  sucho-wacz-urls-03.txt  sucho-wacz-urls.txt  sul-wacz-urls-10.txt  sul-wacz-urls.txt  waczs.csv  waczs.tsv
.beads/: config.yaml  issues.jsonl
.github/: dependabot.yml
.github/workflows/: ci.yml
collections/: 34a9194b.md  bc25a441.md  sucho.md
crates/rustyweb-bin/: Cargo.toml
crates/rustyweb-bin/src/: main.rs
crates/rustyweb-bin/tests/: browsertrix_import.rs  cli.rs
crates/rustyweb-lib/: Cargo.toml
crates/rustyweb-lib/src/: browsertrix.rs  cdx.rs  collections.rs  http_range.rs  index.rs  lib.rs  markdown.rs  pdf.rs  search.rs  server.rs  thumbnail.rs  views.rs  wacz.rs  warc.rs
crates/rustyweb-lib/static/assets/: app.css
crates/rustyweb-lib/static/replay/: index.html  viewer.html
crates/rustyweb-lib/tests/: browser.rs  integration.rs
crates/rustyweb-lib/tests/fixtures/: github-bitcoin-mining.wacz  pdf-doc.wacz  simple.wacz
scripts/: browsertrix-wacz-urls.py  fetch-replay.sh
