[workspace]
members = [
    "crates/rustyweb-lib",
    "crates/rustyweb-bin",
]
resolver = "2"

[workspace.dependencies]
# HTTP server
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.7", features = ["compression-full", "fs", "trace"] }

# HTML templating (compile-time, type-checked)
maud = { version = "0.27", features = ["axum"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Index storage
tantivy = "0.26"

# WARC / WACZ
warc = "0.4"
zip = "2"

# URL / HTML
url = "2"
scraper = "0.27"
# CLI progress bars (indexing).
indicatif = "0.18"
# Registrable-domain (public suffix list) for the cross-subdomain site: facet.
psl = "2"
# Pure-Rust language detection (fallback when a page has no <html lang>).
whatlang = "0.18"

# PDF text extraction
pdf-extract = "0.7"

# HTTP client for indexing remote WACZ files
ureq = "2"

# Temporarily redirect stdout (to silence third-party PDF extraction noise)
gag = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Static assets
rust-embed = "8"

# Parallelism
rayon = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"

# Base64
base64 = "0.22"

# Compression
flate2 = "1"

# Checksums
sha2 = "0.10"

# Datetime
chrono = { version = "0.4", features = ["serde"] }

# Async utilities
tokio-util = { version = "0.7", features = ["io"] }
