[package]
name = "rustyweb"
version = "0.1.0"
edition = "2021"
description = "A small, fast web archive server: full-text search and in-browser replay of WACZ files."
authors = ["Ed Summers <ehs@pobox.com>"]
license = "AGPL-3.0-or-later"

[dependencies]
rustyweb-lib = { path = "../rustyweb-lib" }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
url = { workspace = true }
gag = { workspace = true }
indicatif = { workspace = true }

[dev-dependencies]
# End-to-end test that runs the built binary against a local mock Browsertrix
# API (axum) — see tests/browsertrix_import.rs.
axum = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"
