[package]
name = "rustyweb-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tantivy = { workspace = true }
warc = { workspace = true }
zip = { workspace = true }
url = { workspace = true }
scraper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust-embed = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
flate2 = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
tokio-util = { workspace = true }

[dependencies.tempfile]
version = "3"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
# Headless-browser replay smoke test (run with `cargo test -- --ignored`).
thirtyfour = "0.35"
