[package]
name = "rustyweb-lib"
version = "0.1.0"
edition = "2021"
description = "Library for indexing and serving WACZ web archives with full-text search and WACZ-direct replay."
authors = ["Ed Summers <ehs@pobox.com>"]
license = "AGPL-3.0-or-later"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tantivy = { workspace = true }
warc = { workspace = true }
zip = { workspace = true }
url = { workspace = true }
scraper = { workspace = true }
pdf-extract = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust-embed = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
flate2 = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
tokio-util = { workspace = true }

[dependencies.tempfile]
version = "3"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
# Headless-browser replay smoke test (run with `cargo test -- --ignored`).
thirtyfour = "0.35"
